--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       html, body, #root {
+        width: 100%;
         height: 100%;
         margin: 0;
         padding: 0;
         overflow: hidden;
+      }
+      html, body {
+        position: fixed; /* Prevents scrolling on mobile */
       }
       body {
         overscroll-behavior-y: contain;
